# egm2008

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  egm.zip.sha256  flake.nix  generate.py  generate_geoid.sh
.github/workflows/: cargo_test.yml
src/: geoid.rs  lib.rs
